# FAK

FAK/: CMakeLists.txt  CMakeLists.txt.user.1bf24e6  CMakeLists.txt.user.913fd57  databasemanager.cpp  databasemanager.h  fieldgroup.cpp  fieldgroup.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  resources.qrc  task.cpp  task.h  taskList.ui
FAK/classes/: deadlinepanel.cpp  deadlinepanel.h  myDayTasks.cpp  myDayTasks.h  myDayTasks.ui  taskGroupsDB.cpp  taskGroupsDB.h  tasksList.cpp  tasksList.h  tasksList.ui
FAK/libs/sqlite3/: libsqlite3.a:Zone.Identifier  sqlite3.lib
FAK/styles/: style.qss
FAK/ui/: importantList.ui  planned.ui
